Fixed spacing in header and wording

--- a/src/styles/components/_how-it-works.scss
+++ b/src/styles/components/_how-it-works.scss
@@ -8,7 +8,7 @@
   }
 
   &__video {
-    width: 57rem;
+    width: 55rem;
   }
 
   &__text {
