--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -15,6 +15,9 @@
 
     &__brand {
       height: 2rem;
+      position: absolute;
+        top: 50%;
+      transform: translateY(-50%);
     }
 
     &__link {
